--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
@@ -10,33 +12,66 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <main>
+    <!-- <img src="./images/bg-intro-mobile.png" alt=""> -->
 
-  Learn to code by watching others
+    <section class="sec-title">
+      <h1>Learn to code by <br> watching others</h1>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+        but understanding how developers think is invaluable. </p>
+    </section>
 
-  Try it free 7 days then $20/mo. thereafter
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+    <section class="sec-price">
+      <p><strong>Try it free 7 days</strong> then <br> $20/mo. thereafte</p>
+    </section>
 
-  Claim your free trial 
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
+    <section class="sec-inf">
+      <div class="sec-inf-conteudo">
+        <input type="text" name="" id="" placeholder="First Name ">
+        <input type="text" name="" id="" placeholder="Last Name ">
+        <input type="email" name="" id="" placeholder="Email Address">
+        <input type="password" name="" id="" placeholder="Password">
+
+        <button>Claim your free trial </button>
+
+        <p>By clicking the button, you are agreeing to our <strong>Terms and Services</strong> </p>
+      </div>
+      
+    </section>
+
+
+  </main>
+
+
+
+
+
+
+
+
+
+
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
+
 </html>
