desktop em progresso

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -7,11 +7,12 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./mobile/mobile.css">
+  <link rel="stylesheet" href="./desktop/desktop.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution {
       font-size: 11px;
       text-align: center;
@@ -20,7 +21,7 @@
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -35,24 +36,27 @@
     </section>
 
 
-    <section class="sec-price">
-      <p><strong>Try it free 7 days</strong> then <br> $20/mo. thereafte</p>
-    </section>
+    <div class="price-inf">
+      <section class="sec-price">
+        <p><strong>Try it free 7 days</strong> then $20/mo. thereafte</p>
+      </section>
 
 
-    <section class="sec-inf">
-      <div class="sec-inf-conteudo">
-        <input type="text" name="" id="" placeholder="First Name ">
-        <input type="text" name="" id="" placeholder="Last Name ">
-        <input type="email" name="" id="" placeholder="Email Address">
-        <input type="password" name="" id="" placeholder="Password">
+      <section class="sec-inf">
+        <div class="sec-inf-conteudo">
+          <input type="text" name="" id="" placeholder="First Name ">
+          <input type="text" name="" id="" placeholder="Last Name ">
+          <input type="email" name="" id="" placeholder="Email Address">
+          <input type="password" name="" id="" placeholder="Password">
 
-        <button>Claim your free trial </button>
+          <button>Claim your free trial </button>
 
-        <p>By clicking the button, you are agreeing to our <strong>Terms and Services</strong> </p>
-      </div>
-      
-    </section>
+          <p>By clicking the button, you are agreeing to our <strong>Terms and Services</strong> </p>
+        </div>
+
+      </section>
+    </div>
+
 
 
   </main>
